<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ParkingSpace</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_parking_lot_list">附近的停车场</string>
    <string name="title_activity_parking_lot_detail">详细信息</string>
    <string name="title_activity_pay">支付</string>
    <string name="title_activity_evaluate">评价</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_welcome">欢迎</string>
    <string name="login_label_username">用户名</string>
    <string name="login_username_hint">用户名或车牌号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登录</string>
    <string name="login_register_link">注册</string>
    <string name="register_login_link">返回登录</string>
    <string name="thanks">感谢使用！</string>
    <string name="title_activity_release_parking_lot">停车场</string>
    <string name="title_activity_parking_record_data">最近停车记录</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_parking_car_list">正在停车的用户</string>
    <string name="title_activity_admin_login">管理员登录</string>
    <string name="title_activity_record_of_parking_lot">停车记录</string>

</resources>
