<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@drawable/background_login">
<!-- padding 内边距   layout_margin 外边距
      android:layout_alignParentTop 布局的位置是否处于顶部 -->

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="15dip"
    android:layout_margin="15dip"
    android:background="@drawable/background_login_div" >
    <!-- 账号 -->
    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        
        android:layout_marginTop="5dp"
        android:text="手机号"/>
    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:hint="请输入您的注册手机号"
        android:layout_below="@id/tvPhoneNumber"
        android:singleLine="true"
        android:background="@android:color/transparent"
        android:inputType="phone"/>
    <!-- 密码 text -->
    <TextView
        android:id="@+id/login_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhoneNumber"
        android:layout_marginTop="3dp"
        android:text="@string/login_label_password"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/login_password_input"
        android:singleLine="true"
        android:hint="@string/login_label_password"
        android:background="@android:color/transparent"
        android:inputType="textPassword" />
    <!-- 登录button -->
    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_label_signin"
        android:layout_marginTop="5dp"
        android:textColor="#666666"
        android:layout_below="@id/etPassword"
        android:layout_alignRight="@id/etPassword"
        android:background="@drawable/btn_login"
        android:onClick="login"/>
</RelativeLayout>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    <TextView  android:id="@+id/register_link"
        android:text="@string/login_register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textColor="#888"
        android:textColorLink="#FF0066CC"
        android:textSize="30sp"
        android:clickable="true"
        android:onClick="register"/>
    <ImageView 
        android:src="@drawable/flower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="75dp" />
</RelativeLayout>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dp"
	    android:scrollbars="vertical"
	    android:layout_alignParentBottom="true"
	    android:scrollbarAlwaysDrawVerticalTrack="true"
	    android:singleLine="false"
	    android:text="若要取得管理员资格，请在注册您的停车场信息后发送信息验证邮件到***@**，我们将在三天内对您的身份完成验证，谢谢合作！"
	    android:textColor="#888"
	    android:textSize="14sp" />
</RelativeLayout>
</LinearLayout>
